# embedded-experiments

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config
bitcanvas/: Cargo.toml
bitcanvas/src/: consts.rs  lib.rs  view.rs
is31fl/: Cargo.toml
is31fl/src/: address.rs  config.rs  lib.rs
is31fl3730/: Cargo.toml
is31fl3730/src/: address.rs  configuration.rs  display.rs  lib.rs  lighting.rs  pixels.rs  register.rs
lsm9ds1/: Cargo.toml
lsm9ds1/src/: lib.rs
mcp/: Cargo.toml
mcp/src/: lib.rs
part01-blink/: Cargo.toml  README.md  memory.x
part01-blink/src/: main.rs
part02-clock/: Cargo.toml  build.rs
part02-clock/.cargo/: config
part02-clock/c/: .mxproject  Makefile  STM32F100RBTx_FLASH.ld  c.ioc
part02-clock/c/Src/: main.c  stm32f1xx_hal_msp.c
part02-clock/src/: main.rs
part03-g0-hello/: Cargo.toml  build.rs
part03-g0-hello/src/: main.rs
part03a-hal/: Cargo.toml  openocd_run.gdb
part03a-hal/src/: main.rs
part03b-i2c/: Cargo.toml  openocd_run.gdb
part03b-i2c/src/: board.rs  main.rs
part05-g0-hello/: Cargo.toml  memory.x
part05-g0-hello/src/: main.rs
part06-g0-i2c/: Cargo.toml  openocd_run.gdb
part06-g0-i2c/.cargo/: config
part06-g0-i2c/src/: main.rs
