[package]
name = "bitcanvas"
version = "0.0.1"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
edition = "2018"

keywords = ["canvas", "2d", "no-std", "embedded"]
categories = ["data-structures", "no-std", "embedded"]

[dependencies]
heapless = "0.4.2"
bit_field = "0.9.0"

[dependencies.embedded-graphics]
optional = true
version = "0.4.5"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]