[package]
name = "part03b-i2c"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
edition = "2018"

[dependencies]
#panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.2"
nb = "0.1.1"
embedded-hal = "0.2.2"
shared-bus = { version = "0.1.4", features = ["cortexm"] }
embedded-graphics = "0.4.7"
profont = { version = "0.2.0", features = [] }
mcp23008 = { path = "../mcp" }
is31fl3730 = { path = "../is31fl3730" }
lsm9ds1 = { path = "../lsm9ds1" }
bitcanvas = { path = "../bitcanvas" }
num-format = { version = "0.4.0", default-features = false }

[dependencies.stm32f1]
version = "0.6.0"
features = ["stm32f100", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.2.0"
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
features = ["stm32f100", "rt"]

[features]
default = []